Fixed issue #1 (emoticon wrapping on error pages)

--- a/css/error.css
+++ b/css/error.css
@@ -42,6 +42,7 @@ h1 {
 
 h1 span {
 	color: #bbb;
+	white-space: nowrap;
 }
 
 h3 {
